crates/ruff_mdtest/resources/mdtest/snapshots/f-string.md_-_`f-string`_(`UP032`)_-_Dropped_arguments_em…_(3f27b618a93df9d2).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: f-string.md - `f-string` (`UP032`) - Dropped arguments emit an unsafe fix
mdtest path: crates/ruff_linter/../ruff_linter/resources/mdtest/pyupgrade/f-string.md
---

# Python source files

## mdtest_snippet.py

```
1 | "{1}".format(x := 1, x)  # error: [f-string]
2 | "a".format(foo())  # error: [f-string]
3 | "1".format(1 / 0)  # error: [f-string]
```

# Diagnostics

```
error[UP032]: Use f-string instead of `format` call
 --> src/mdtest_snippet.py:1:1
  |
1 | "{1}".format(x := 1, x)  # error: [f-string]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Convert to f-string
  - "{1}".format(x := 1, x)  # error: [f-string]
1 + f"{x}"  # error: [f-string]
2 | "a".format(foo())  # error: [f-string]
3 | "1".format(1 / 0)  # error: [f-string]
note: This is an unsafe fix and may change runtime behavior

```

```
error[UP032]: Use f-string instead of `format` call
 --> src/mdtest_snippet.py:2:1
  |
2 | "a".format(foo())  # error: [f-string]
  | ^^^^^^^^^^^^^^^^^
  |
help: Convert to f-string
1 | "{1}".format(x := 1, x)  # error: [f-string]
  - "a".format(foo())  # error: [f-string]
2 + "a"  # error: [f-string]
3 | "1".format(1 / 0)  # error: [f-string]
note: This is an unsafe fix and may change runtime behavior

```

```
error[UP032]: Use f-string instead of `format` call
 --> src/mdtest_snippet.py:3:1
  |
3 | "1".format(1 / 0)  # error: [f-string]
  | ^^^^^^^^^^^^^^^^^
  |
help: Convert to f-string
1 | "{1}".format(x := 1, x)  # error: [f-string]
2 | "a".format(foo())  # error: [f-string]
  - "1".format(1 / 0)  # error: [f-string]
3 + "1"  # error: [f-string]
note: This is an unsafe fix and may change runtime behavior

```
